# TOU_C_Samoilov_A.A

works/project 5/Arkanoid/src/: main.cpp
works/project 6/rock_paper_scissors/src/: main.cpp
works/project 7/: CMakeLists.txt  highscores.txt  main.c
works/project 8/: Makefile  main.cpp
works/Практическая работа 3/Генератор историй/: main.cpp  stories.txt
works/Практическая работа 3/Угадай число/: main.cpp
works/Практическая работа 4/Битва с монстром/: main.cpp
works/Практическая работа 4/Крестики-нолики/: main.cpp
